cmake_minimum_required(VERSION 3.5)
project(landscape)

set(CMAKE_CXX_STANDARD 11)
set(CMALE_CXX_FLAGS "-O3")
set(DEPEN_DIR "depen")

file(GLOB_RECURSE glm
    ${DEPEN_DIR}/glm/*.h
    ${DEPEN_DIR}/glm/*.cpp
    ${DEPEN_DIR}/glm/*.hpp
)

file(GLOB_RECURSE glad
    ${DEPEN_DIR}/GLAD/*.h
)

file(GLOB glfw
    ${DEPEN_DIR}/GLFW/*.h
)

file(GLOB sources
    include/*.h
    include/*.hpp
    src/*.cpp
    src/*.c
)

include_directories("include"  "depen" "depen/GLAD")

add_executable(${PROJECT_NAME} ${glm} ${glad} ${glfw} ${sources})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C)
add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory "${PROJECT_SOURCE_DIR}/shaders" "${PROJECT_SOURCE_DIR}/build")


link_directories("static")
target_link_libraries(${PROJECT_NAME} glfw pthread Xinerama Xcursor X11 Xxf86vm Xrandr Xi GL dl)
